:abc: fix bad image name

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,4 +33,4 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/nodejs-terragrunt:16
+        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/ubuntu-devops:kinetic
