--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -10,6 +10,7 @@ jobs:
         include:
         - terraform_version: 1.3.3
           terragrunt_version: 0.39.2
+          tag: kinetic
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -37,4 +38,4 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/ubuntu-devops:kinetic
+        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/ubuntu-devops:${{ matrix.tag }}
