--- a/.github/workflows/minimal-docker-hub.yml
+++ b/.github/workflows/minimal-docker-hub.yml
@@ -4,7 +4,7 @@ on:
     branches:
     - main
 jobs:
-  docker-hub:
+  minimal-docker-hub:
     strategy:
       matrix:
         include:
@@ -22,11 +22,6 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-    - name: Login to Amazon ECR Public
-      id: login-ecr-public
-      uses: aws-actions/amazon-ecr-login@v1
-      with:
-        registry-type: public
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
     - name: Build and push
