--- a/minimal/Dockerfile
+++ b/minimal/Dockerfile
@@ -33,6 +33,8 @@ COPY files/awscli.zip /root/awscli.zip
 RUN unzip /root/awscli.zip -d /root
 RUN rm /root/awscli.zip
 RUN /root/aws/install
+RUN rm -rf /usr/local/aws-cli/v2/current/dist/aws_completer /usr/local/aws-cli/v2/current/dist/awscli/data/ac.index /usr/local/aws-cli/v2/current/dist/awscli/examples
+RUN find /usr/local/aws-cli/v2/current/dist/awscli/botocore/data -name examples-1.json -delete
 RUN aws --version
 
 # Entrypoint
