--- a/minimal/Dockerfile
+++ b/minimal/Dockerfile
@@ -17,7 +17,8 @@ SHELL ["/bin/bash", "-c"]
 
 # Install ubuntu packages
 RUN apt update -y
-RUN apt install -y --no-install-recommends jq curl wget zip unzip python3-minimal git tar gzip
+RUN apt install -y --no-install-recommends jq curl wget zip unzip python3-minimal git tar gzip apt-transport-https ca-certificates
+RUN update-ca-certificates
 RUN apt autoremove -y
 RUN apt purge -y --auto-remove
 RUN apt clean -y
