--- a/.github/workflows/aws-public-ecr.yml
+++ b/.github/workflows/aws-public-ecr.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
     - aws
+    - public-ecr
 jobs:
   aws-public-ecr:
     strategy:
@@ -17,17 +18,16 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v2
       with:
-        role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
         aws-region: eu-west-3
+    - name: Login to Amazon ECR Public
+        id: login-ecr-public
+        uses: aws-actions/amazon-ecr-login@v1
+        with:
+          registry-type: public
     - run: yarn install --frozen-lockfile
     - run: sh ./scripts/download.sh files/terraform_linux_amd64.zip https://releases.hashicorp.com/terraform/${{ matrix.terraform_version }}/terraform_${{ matrix.terraform_version }}_linux_amd64.zip
     - run: sh ./scripts/download.sh files/terragrunt https://github.com/gruntwork-io/terragrunt/releases/download/v${{ matrix.terragrunt_version }}/terragrunt_linux_amd64
     - run: sh ./scripts/download.sh files/awscli.zip https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip
-    - name: Login to Amazon ECR Public
-      id: login-ecr-public
-      uses: aws-actions/amazon-ecr-login@v1
-      with:
-        registry-type: public
     - name: Build, tag, and push docker image to Amazon ECR Public
       env:
         REGISTRY: ${{ steps.login-ecr-public.outputs.registry }}
